add vercel file

--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "chatgpt_bot",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./src/main.js",
   "type": "module",
+  "engines": {
+    "node": "16.x"
+  },
   "scripts": {
     "dev": "cross-env NODE_ENV=development nodemon ./src/main.js",
     "start": "cross-env NODE_ENV=production node ./src/main.js"
